<resources>
    <string name="app_name">Dictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="score">Score: %d</string>
    <string name="word_count">%d of %d words</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Try again!</string>
    <string name="select_your_level">Select your English level</string>
    <string name="a1">A1</string>
    <string name="a2">A2</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="search">Search</string>
    <string name="scrambledWord">ScrambledWord</string>
    <string name="study">Study</string>
    <string name="play">Play</string>
</resources>